2007-01-12 Jens Tkotz <jens@peino.de> 1.6-RC1-b3

 * Fix: When an absolute url is given makeFormIntro, also use unhtmlentities

 * Fix: Remove whitespace in comment textarea.

 * Change: Nicer output of formatted_filesize()

 * Fix: Valid HTML in imagemap.php
 
2007-01-12 Jens Tkotz <jens@peino.de> 1.6-RC1-b2

 * Change: Little installer enhancements.

   Thanks to Andy S.

2007-01-12 Jens Tkotz <jens@peino.de> 1.6-RC1-b1

 * CHANGE: Remove <form> from adminbarcommands cell in layout/adminbox.inc
		   \- view_album.php
		   \- view_photo.php

2007-01-07 Chris Kelly <ckdake@ckdake.com> 1.6-alpha3

 * Release: 1.6-alpha3

2007-01-07 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b49

 * Fix: Edit Album Properties was broken.

   Thanks again to Kai.

2007-01-07 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b48

 * Change: Disable caching introduced by contribute patch in b46.
	       The idea is nice, but the code was halfbaken.

2007-01-06 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b47

 Fix: Empty line after ?> in AlbumDB.php

 Fix: User changed could not be saved.

2007-01-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b46

 Change: Patch #1023146
	     AlbumDB performance tweak by Jan Hendrik Mangold.
 
2007-01-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b45

 * Fix: Using $gallery-> and ' inside a " quoted string fails.
  
   Thanks to Kai Tomalik.

2007-01-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b44

 * Fix: Wrong use of gTranslate broke item count in rss

   Thanks to Kai Tomalik

2007-01-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b43

 * Change: Use of <fieldset> in login popup.

2007-01-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b42

 * Change: Added 3rd param $comment_text to drawCommentAddForm()
		   This way the comment Text is not lost after reloadin captcha
   Thanks to Kai Tomalik.

 * Change: "Add comment", Change width of from 500 to 600

 * Change: Nicified layout of Buttons in captcha.
		
2007-01-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b41
