@@ -131,7 +131,9 @@ if ($postnuke ||
 		'popups/album_permissions.php',
 		'popups/colorpicker.php',
 		'popups/copy_photo.php',
+		'popups/create_group.php',
 		'popups/delete_album.php',
+		'popups/delete_group.php',
 		'popups/delete_photo.php',
 		'popups/download.php',
 		'popups/edit_appearance.php',
@@ -140,6 +142,8 @@ if ($postnuke ||
 		'popups/edit_field.php',
 		'popups/edit_thumb.php',
 		'popups/do_command.php',
+		'popups/manage_groups.php',
+		'popups/modify_group.php',
 		'popups/move_album.php',
 		'popups/move_photo.php',
 		'popups/photo_owner.php',
@@ -170,6 +174,7 @@ if ($postnuke ||
 			   "tools/validate_albums.php",
 			   "upgrade_album.php",
 			   "upgrade_users.php",
+		'usage.php',
 			   "user_preferences.php",
 			   "view_album.php",
 			   "view_comments.php",
