@@ -1,3 +1,10 @@
+2007-01-12 Jens Tkotz <jens@peino.de> 1.6-RC1-b4
+
+ CHANGE: Enable Group Support for Joomla!
+	     Joomla has no real groups, so put Joomla Users into Gallery groups.
+
+ Thanks to Kai Tomalik for assistance.
+
 2007-01-12 Jens Tkotz <jens@peino.de> 1.6-RC1-b3
 
  * Fix: When an absolute url is given makeFormIntro, also use unhtmlentities
